--- a/manage_bill.html
+++ b/manage_bill.html
@@ -276,7 +276,14 @@
                     'branch_id': branch_id,
                     'pay': pay                        
                 },
-                success: function (data) {                    
+                success: function (data) { 
+                    if(data == "fail"){
+                        $.alert({
+                            icon: 'fa fa-warning',
+                            title: 'พบปัญหา',
+                            content: 'กรุณาลองอีกครั้ง',
+                        });
+                    }               
                 }
             });
         }
