--- a/sale.html
+++ b/sale.html
@@ -233,8 +233,8 @@
               <div class="row" style="margin-right: 25px;">
                 <div class="col-9"></div>
                 <div class="col-3 text-center">
-                  <button class="btn btn-success" onclick="add()">เพิ่มรายการ</button>
-                  <button class="btn btn-danger" onclick="reset()">ค่าเริ่มต้น</button>
+                  <button class="btn btn-success" onclick="add()">เพิ่มรายการ [F2]</button>
+                  <button class="btn btn-danger" onclick="reset()">ค่าเริ่มต้น [F4]</button>
                 </div>
               </div>
             </div>
@@ -262,7 +262,7 @@
           <div class="col-1"></div>
           <div class="col-3 text-right" style="padding-top: 10px;">
             <div class="input-group">
-              <button id="btn_checkbill" class="btn btn-danger" style="text-align: center; margin-right: 50%;" data-toggle="modal" data-target="#myModal" onclick="check_bill()">คิดเงิน</button>
+              <button id="btn_checkbill" class="btn btn-danger" style="text-align: center; margin-right: 50%;" data-toggle="modal" data-target="#myModal" onclick="check_bill()">คิดเงิน [F7]</button>
               <button id="print-title" class="btn btn-info" style="text-align: center; margin-right: 5%;" data-toggle="modal" data-target="#printModal">ใบเสร็จ
                 <span>
                   <i class="fa fa-print"></i>
