--- a/clone.html
+++ b/clone.html
@@ -137,6 +137,14 @@
 
         <!-- Page Content -->
         <div id="page-content-wrapper">
+            <div id="offline" class="alert alert-danger alert-dismissible" hidden>
+                <button type="button" class="close" data-dismiss="alert">&times;</button>
+                <strong>แจ้งเตือน!</strong> อินเทอเน็ตขาดการเชื่อมต่อ.
+            </div>
+            <div id="online" class="alert alert-success alert-dismissible" hidden>
+                <button type="button" class="close" data-dismiss="alert">&times;</button>
+                <strong>สำเร็จ!</strong> อินเทอเน็ตทำการเชื่อมต่อแล้ว.
+            </div>
             <!-- Navbar -->
             <nav class="navbar navbar-expand-md navbar-dark mb-4 rounded" style="background: #860b0b;">
               <a href="#menu-toggle" class="navbar-brand " id="menu-toggle">รายการ</a>
@@ -146,7 +154,7 @@
               <div class="collapse navbar-collapse justify-content-md-center" id="navbarCollapse">
                 <h3 id="nav-title">ขายสินค้า</h3>
               </div>
-            </nav>
+            </nav>         
             
             <!-- 4 4 4 4 4 4 4 4 -->
             <div class="row">
@@ -539,7 +547,7 @@
 
         // Hide
         $("#show_list_add").hide();
-        $("#show_list_add").show();
+        $("#show_list_add").show();      
 
         $(document).keydown(function(objEvent) {
           if (objEvent.keyCode == 9) {  //tab pressed
@@ -774,6 +782,23 @@
 
         $("#cus").easyAutocomplete(options_cus);
     });  
+
+    window.addEventListener("online", function() {
+        check_status()
+    })
+    window.addEventListener("offline", function() {
+        check_status()
+    })
+
+    function check_status(){
+        if (navigator.onLine) {
+            $("#online").prop("hidden",false);
+            $("#offline").prop("hidden",true);
+        } else {
+            $("#online").prop("hidden",true);
+            $("#offline").prop("hidden",false);
+        }
+    }
 
     function detail(){
       $('#branch').empty();     
